Change wording on plan vs realization.

--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -14,7 +14,7 @@
    "id": "3fbb38b5",
    "metadata": {},
    "source": [
-    "This package is a laboratory for exploring the sensitivity of retirement financial decisions. It is not a planning tool, but more an environment to explore *what if* scenarios.\n",
+    "This package is a laboratory for exploring the sensitivity of retirement financial decisions. It is not a planning tool, but more an environment to explore *what if* scenarios. It is not a planning tool, but more an environment to explore *what if* scenarios. It provides different realizations of a financial strategy. One can certainly have a savings plan, but due to the volatility of financial investments, it is impossible to have an asset earnings plan. This is where this tool fits it. Given your savings and spending desires, it can generate different realizations of your strategy under different market assumptions.\n",
     "\n",
     "Copyright - Martin-D. Lacasse (2023)\n",
     "\n",
@@ -27,7 +27,11 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "This file is provided as a template to introduce you to HARP. For simulating your own plan, it is best to make a copy of this file and all those marked *jack+jill*. Then you can personalize the case with your numbers and start to experiment with HARP."
+    "This file is provided as a template to introduce you to HARP. This notebook describes the case of Jack adn Jill, a ficticious couple used for demonstration.\n",
+    "\n",
+    "For simulating your own realizations, it is best to make a copy of this file and all those marked *jack+jill*. Copy them and give them you own names. Then you'll be able to personalize the case with your own numbers and start experimenting with HARP.\n",
+    "\n",
+    "I assume that you have some familiarity with using a jupyter notebook, and some basic programming skills in Python."
    ]
   },
   {
@@ -61,8 +65,8 @@
    "id": "d2d87b7e",
    "metadata": {},
    "source": [
-    "## Initialize your plan\n",
-    "Plan must start with providing the year of birth of each spouse(s) and their expected lifespan(s).\n",
+    "## Initialize your realization\n",
+    "In order to be able to generate a realization of the future, Jack and Jill must start with providing the year of birth of each spouse(s) and their expected lifespan(s).\n",
     "\n",
     "For selecting your own numbers, there are plenty of longivity predictors on the web. Pick your favorite:\n",
     "\n",
@@ -134,8 +138,9 @@
     "Values in between will be interpolated using a linear operator (for now). This can be useful\n",
     "if you want to shift asset allocation as you age.\n",
     "\n",
-    "In the example below, allocation starts in full stock equities in the tax-free account,\n",
-    "gradually transitioning to a traditional 60/40 portfolio towards the end of life. "
+    "In the example below, Jack's and Jill's allocations start in full stock equities in the tax-free account,\n",
+    "gradually transitioning to a traditional 60/40 portfolio towards the end of life. Their tax-deferred\n",
+    "account stays as a traditional 60/40 for the duration of their lives."
    ]
   },
   {
@@ -173,7 +178,7 @@
     "\n",
     "    plan.setRates('historical', 1966, 2022)\n",
     "\n",
-    "In this case, year 2023 will have the same rates as those that happened in 1966, and 2024 will have those from 1967, and so on. This is given for instructional purposes only. No one should plan using the worst-case scenario. But is can be nformative to test your own plan.\n",
+    "In this case, this year will have the same rates as those that happened in 1966, and next year will have those from 1967, and so on. This is given for instructional purposes only. No one should plan using the worst-case scenario. But is can be informative to test your own case.\n",
     "\n",
     "Stochastic data on the other hand, computes the multivariate distributions for the 4 rates in the selected range. For example,\n",
     "\n",
@@ -240,7 +245,7 @@
     "    \n",
     "For social security, you must provide the predicted amount(s) and the age(s) at which you start receiving benefits. There are plenty of social security benefit estimators on the web, including the info you can get directly from your own account at the Social Security Administration (ssa.gov).\n",
     "\n",
-    "Here Jill has an unindexed pension of \\\\$10k per year. Both Jack and Jill decided to take their social security benefits at age 70. The amount provided are estimation of the amounts they would receive at age 70. "
+    "Here Jill has an unindexed pension of \\\\$10k per year. Both Jack and Jill decided to take their social security benefits at age 70. The amounts provided are estimation of the amounts they would receive at age 70. "
    ]
   },
   {
@@ -261,7 +266,7 @@
    "metadata": {},
    "source": [
     "## Provide work income, contributions, Roth conversions, and other items by year\n",
-    "In order to get a plan, you must provide an Excel workbook with one spreadsheet (tab) per spouse with the following information:\n",
+    "In order to execute a realization, one must provide an earning, saving, and Roth conversion plan. This is done in an Excel workbook with one spreadsheet (tab) per spouse with the following information:\n",
     "\n",
     "|year|anticipated income|ctrb taxable | ctrb 401k | ctrb Roth 401k | ctrb IRA | ctrb Roth IRA | Roth X | big ticket items|\n",
     "|--|--|--|--|--|--|--|--|--|\n",
@@ -272,14 +277,15 @@
     "\n",
     "Here, 20XX is the first year after both spouses have passed. For the columns, *anticipated income* is the annual amount (gross) that you anticipate to receive from employement or other sources (not including dividends from your taxable investment account). Note that column names are case sensitive and all of these entries must be in lower case.\n",
     "\n",
-    "For the purpose of this planning, there is no clear definition of retirement age. There will be a year, however, from which you will stop having anticipated income, or diminished income due to decreasing your work load. \n",
+    "For the purpose of this exercise, there is no clear definition of retirement age. There will be a year, however, from which you will stop having anticipated income, or diminished income due to decreasing your work load. This transition can be gradual or sudden.\n",
     "\n",
     "Contributions to your savings accounts are marked as *ctrb*. Contributions to your 401k must also include your employer's contributions. As this file is in excel, you can use the calculator to enter percentage of your anticipated income if that is easier for you.\n",
-    "Files format from the LibreOffice software can also be read.\n",
     "\n",
     "Roth conversion are specified in the column marked *Roth X*. Finally, *big ticket items* are the sale or purchase of a house, or any other major expense or money that you would give or receive (e.g., inheritance, or large gifts to or from you). Therefore, the sign (+/-) of entries in this column is important. All other column entries should be positive.\n",
     "\n",
     "The tab name for each spreadsheet represents the name of the spouse for reporting yearly transactions affecting your plan. So for Jack and Jill, this worksheet file will have two tabs, the first one named *Jack* and the second one named *Jill*, following the same order of data provided before.\n",
+    "\n",
+    "Note that the file format from the (free) LibreOffice software can also be read, so you do not need to have an Excel license.\n",
     "\n",
     "Jack and Jill provide their specific information in the file *jack+jill.xlsx*. Open this file in Excel and familiarize yourself with its contents."
    ]
@@ -299,7 +305,7 @@
    "id": "b99b6d05",
    "metadata": {},
    "source": [
-    "## How do you want to withdraw from you and your spouse's accounts?\n",
+    "## How to withdraw from spousal accounts?\n",
     "By specifying an *auto* spousal split, the withdrawals from the retirement accounts will be made proportial to their respective balances. It can also be specified as a fractional value (e.g., 0.65) in which case 0.65 will be taken from the first account and the other 35% taken from the other (second entry) spouse.\n",
     "\n",
     "All withdrawals use a smart banking approach which favors depleting taxable accounts before tax-deferred, before tax-free. With *auto*, additional checks and bounds are used to coordinate the spousal accounts."
@@ -323,7 +329,7 @@
     "## Run calculations\n",
     "We're ready!\n",
     "\n",
-    "This call runs the calculations for the time horizon set by the life expectancy of individual(s)."
+    "This call runs the calculations for the time horizon set by the life expectancies of Jack and Jill."
    ]
   },
   {
@@ -350,7 +356,7 @@
    "metadata": {},
    "source": [
     "### Show net income compared to target over the years\n",
-    "This graph shows how the actual net income generated by the plan matches the inflation-adjusted net income profile specified."
+    "This graph shows how the actual net income generated by the plan realization matches the inflation-adjusted net income profile specified."
    ]
   },
   {
@@ -369,7 +375,7 @@
    "metadata": {},
    "source": [
     "### Show sources of income over the years\n",
-    "Your income will be coming from mutiple sources, and it can be quite complex. This graphs shows the breakdown of Jack and Jill's sources of income by spouse and by origin. Note that distributions from tax-deferred accounts (*dist*) are distinguished from required minimum distributions (*rmd*) as they serve different purposes. Other labels should be self-expanatory."
+    "Income will be typically coming from mutiple sources, and it can be quite complex. This graphs shows the breakdown of Jack's and Jill's sources of income by spouse and by origin. Note that distributions from tax-deferred accounts (*dist*) are distinguished from required minimum distributions (*rmd*) as they serve different purposes. Other labels should be self-expanatory."
    ]
   },
   {
@@ -390,11 +396,7 @@
    "metadata": {},
    "source": [
     "### Show account balances at the beginning of each year\n",
-    "The balance for each account and each spouse is calculated at the beginning of each year. To get more information about the last year, one can use\n",
-    "\n",
-    "    plan.estate(30)\n",
-    "    \n",
-    "which returns the value of the estate, assuming (in this case) a 30\\% tax burden on the taxable portion of the estate (read tax-deferred accounts). Estate returns two values: the total value and the cumulative inflation rate between today and the last day of the plan."
+    "The balance for each account and each spouse is calculated at the beginning of each year. "
    ]
   },
   {
@@ -405,6 +407,18 @@
    "outputs": [],
    "source": [
     "plan.plotAccounts();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d79d6dc",
+   "metadata": {},
+   "source": [
+    "To get more information about the last year, one can use\n",
+    "\n",
+    "    plan.estate(30)\n",
+    "    \n",
+    "which returns the value of the estate, assuming (in this case) a 30\\% tax burden on the taxable portion of the estate (read tax-deferred accounts). Estate returns two values: the total value and the cumulative inflation rate between today and the last day of the realization."
    ]
   },
   {
@@ -424,7 +438,7 @@
    "metadata": {},
    "source": [
     "### Show annual taxes paid over the years\n",
-    "This graph shows how much Jack and Jill paid in federal taxes over the years."
+    "This graph shows how much Jack and Jill paid in federal taxes over the years of this realization."
    ]
   },
   {
@@ -443,9 +457,9 @@
    "metadata": {},
    "source": [
     "### Show taxable annual income and anticipated tax brackets\n",
-    "Gross income also includes Roth conversions and big-ticket items that are not contributing to your net income. This graph shows Jack and Jill's gross taxable income and how it compare with some anticipated marginal tax brackets. This can be convenient if you want to perform ROth conversion and remain below a certain tax bracket.\n",
+    "Gross income also includes Roth conversions and big-ticket items that are not contributing to your net income. This graph shows Jack and Jill's gross taxable income and how it compare with some anticipated marginal tax brackets. This can be convenient if you want to perform Roth conversion and remain below a certain tax bracket.\n",
     "\n",
-    "Note the shift in tax brakets taking place as the Tax Cuts and Job Act expires after 2025."
+    "Note the shift in tax brackets taking place as the Tax Cut and Job Act expires after 2025."
    ]
   },
   {
@@ -466,7 +480,7 @@
    "metadata": {},
    "source": [
     "### Show annual rates used for calculations\n",
-    "As described above, there are many choices for selecting rates. This graph will display the annual rates used for the whole duration of the plan timespan."
+    "As described above, there are many choices for selecting rates. This graph will display the annual rates used during the timespan of this realization."
    ]
   },
   {
@@ -486,8 +500,8 @@
    "id": "96d1dd05",
    "metadata": {},
    "source": [
-    "## Do we save this plan?\n",
-    "The plan contains a lot of information on the distribution amounts, including the required minimum distribution that had to be performed under the given assuptions. This info can be saved in an excel workbook with one spreadsheet (tab) for Jack and one for Jill."
+    "## Do we save this realization?\n",
+    "This realization contains a lot of information on the distribution amounts, including the required minimum distribution that had to be performed under the given assuptions. This info can be saved in an excel workbook with one spreadsheet (tab) for Jack and one for Jill."
    ]
   },
   {
@@ -497,7 +511,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plan.savePlanXL('Jack and Jill')"
+    "# plan.saveRealizationXL('Jack and Jill')"
    ]
   },
   {
@@ -506,7 +520,9 @@
    "metadata": {},
    "source": [
     "## Next level\n",
-    "Scripting Monte-Carlo simulations can be done by embedding the calls above in an iterative script. Such a script is included here. The script *jack+jill.py* contains two functions. In the first one, historical data is used to explore how the plan survives the test of historical rates from 1928 to the most recent past. The other function uses Monte-Carlo approach to generate ficticious rates derived from the statistical distribution of those observed in a selected time period."
+    "Scripting Monte-Carlo simulations can be done by embedding the calls above in an iterative script. In those simulations, multiple instances are executed to further explore the robustness of your decisions under different market realizations.\n",
+    "\n",
+    "The script *jack+jill.py* is intended for that purpose. It contains two functions. In the first one, historical data is used to explore how the plan survives the test of historical rates from 1928 to the most recent past. The other function uses a Monte-Carlo approach to generate ficticious rates derived from the statistical distribution of those observed in a selected time period."
    ]
   },
   {
