Getting closer to the end. Is this v. 1.0?

--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -14,7 +14,7 @@
    "id": "3fbb38b5",
    "metadata": {},
    "source": [
-    "This package is a laboratory for exploring the sensitivity of retirement financial decisions. It is not a planning tool, but more an environment to explore *what if* scenarios. It is not a planning tool, but more an environment to explore *what if* scenarios. It provides different realizations of a financial strategy. One can certainly have a savings plan, but due to the volatility of financial investments, it is impossible to have an asset earnings plan. This is where this tool fits it. Given your savings and spending desires, it can generate different realizations of your strategy under different market assumptions.\n",
+    "This package is a laboratory for exploring the sensitivity of retirement financial decisions. Strictly speaking, it is not a planning tool, but more an environment to explore *what if* scenarios. It provides different realizations of a financial strategy. One can certainly have a savings plan, but due to the volatility of financial investments, it is impossible to have an asset earnings plan. This is where this tool fits it. Given your savings and spending desires, it can generate different realizations of your strategy under different market assumptions.\n",
     "\n",
     "Copyright - Martin-D. Lacasse (2023)\n",
     "\n",
@@ -27,9 +27,9 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "This file is provided as a template to introduce you to HARP. This notebook describes the case of Jack adn Jill, a ficticious couple used for demonstration.\n",
+    "This file is provided as a template to introduce you to HARP. This notebook describes the case of Jack and Jill, a ficticious couple used for demonstration.\n",
     "\n",
-    "For simulating your own realizations, it is best to make a copy of this file and all those marked *jack+jill*. Copy them and give them you own names. Then you'll be able to personalize the case with your own numbers and start experimenting with HARP.\n",
+    "For simulating your own realizations, it is best to make a copy of this file and all those beginning by *jack+jill*. Copy them keeping the same extension and give them you own names. Then you'll be able to personalize a case with your own numbers and start experimenting with HARP.\n",
     "\n",
     "I assume that you have some familiarity with using a jupyter notebook, and some basic programming skills in Python."
    ]
@@ -102,7 +102,7 @@
     "\n",
     "For married couples, there are two values for each type of account, one for each spouse following the same order as before. For single individuals, only one value needs to be entered between each [ ].\n",
     "\n",
-    "The beneficiary values specify the fraction of total of assets left to the other spouse at death. For example, a spouse leaving 3/4 of her fortune to her three children and the other part to her partner would have a beneficiary value of 0.25.\n",
+    "Most investment accounts have named beneficiaries. The beneficiary values specify the fraction of total of assets left to the other spouse at death. For example, a spouse leaving 3/4 of her fortune to her three children and the other part to her partner would have a beneficiary value of 0.25.\n",
     "\n",
     "Jack and Jill leave everything to each other as account beneficiaries ([1, 1]). Jack has \\\\$90k in his taxable account, \\\\$500k in his 401k, and \\\\$80 in his Roth 401k and Roth IRAs. Jill has \\\\$40k in her bank account, \\\\$150k in a 403b, and \\\\$25k in Roth IRAs in which she contributed over the years."
    ]
@@ -126,7 +126,7 @@
    "metadata": {},
    "source": [
     "## What are current and future asset allocations?\n",
-    "Each account can invest in 4 major asset classes:\n",
+    "Each savings account can invest in 4 major asset classes:\n",
     "- Equity funds tracking the S&P500 index\n",
     "- Bond assets tracking the Corporate bonds (Baa) index\n",
     "- Fixed-income securities represented by 10-year Treasury bonds\n",
@@ -136,7 +136,7 @@
     "\n",
     "You are asked to provide an asset distribution for today, and one for the end of your life.\n",
     "Values in between will be interpolated using a linear operator (for now). This can be useful\n",
-    "if you want to shift asset allocation as you age.\n",
+    "if you want to shift assets allocation as you age.\n",
     "\n",
     "In the example below, Jack's and Jill's allocations start in full stock equities in the tax-free account,\n",
     "gradually transitioning to a traditional 60/40 portfolio towards the end of life. Their tax-deferred\n",
@@ -168,9 +168,9 @@
    "source": [
     "## Specify rates of return and inflation rate\n",
     "Rates of return can be specified for each class of assets, and inflation.\n",
-    "Valid entries are 'historical', 'stochastic', or a list of average values.\n",
+    "Valid entries are 'historical', 'stochastic', or a list of fixed average values.\n",
     "\n",
-    "For historical and stochastic data, data from 1928 to today is available for experimenting.\n",
+    "For *historical* and *stochastic* data, data from 1928 to today is available for experimenting.\n",
     "Ranges chosen smaller that the life horizon will have rate values repeated in cycle. For example,\n",
     "choosing historical data from 1994 to 1996 will repeat these three values over the timespan of the plan.\n",
     "\n",
@@ -193,7 +193,7 @@
     "    \n",
     "This example would use a fixed average rates of 9.6%, 4% and 3% average return on S&P500, corporate bonds, Treasury bonds, and common assets, respectively, with an average inflation rate of 3.8%. Common assets are investments tracking inflation only.\n",
     "\n",
-    "Note that the S&P500 rates provided always include dividends."
+    "Note that the S&P500 rates provided always include dividends, which are assumed to be reinvested."
    ]
   },
   {
@@ -212,12 +212,12 @@
    "id": "3ceb602b",
    "metadata": {},
    "source": [
-    "## What is your desired net income at retirement?\n",
+    "## How much net income is desirable at retirement?\n",
     "For determining this value, retirement planners will strongly suggest that you've must have done a cashflow analysis on your yearly spending. After this exercise, you should have a good idea of how much you'll need in retirement. You can also experiment with multiple scenarios and see what your savings can sustain.\n",
     "\n",
     "The desired income here is the minimum net income (i.e., after paying taxes) that you would like to have starting at your \"retirement age\". We will define this term below. This income is adjusted for inflation and can follow an additional adjustment called a *smile* profile. A *smile* profile accounts for the fact that your spending capacity will modulate during retirement as you go from the so-called gogo years to the no-go years. A *flat* profile, on the other hand, will keep the same value, which will only be inflation-adjusted.\n",
     "\n",
-    "The target and actual net income values achieved by the plan can be plotted as will see below."
+    "The target and actual net income values achieved by the plan can be plotted as will see below. Jack and Jill believe that they can be comfortable with \\\\$80k per year. Can they afford it?"
    ]
   },
   {
@@ -228,7 +228,7 @@
    "outputs": [],
    "source": [
     "# Enter desired value for net income, and spending profile.\n",
-    "plan.setDesiredIncome(75000, 'smile')"
+    "plan.setDesiredIncome(80000, 'smile')"
    ]
   },
   {
@@ -236,7 +236,7 @@
    "id": "8dbdb068",
    "metadata": {},
    "source": [
-    "## You must also anticipate having some fixed income?\n",
+    "## What about anticipated fixed income?\n",
     "Pension and social security are fixed income. Model here assumes that pension is not inflation adjusted while social security benefits are (but code can easily be modified to account for inflation-adjusted pensions). Entries are the predicted amount for each spouse and the age of the commencement of benefits.\n",
     "\n",
     "If you have no pension, just use zeros (0) as entries, as in\n",
@@ -265,7 +265,8 @@
    "id": "4ef3e5a4",
    "metadata": {},
    "source": [
-    "## Provide work income, contributions, Roth conversions, and other items by year\n",
+    "## There must be a plan for saving\n",
+    "The most controllable part of retirement planning is the control one has over work income, contributions, Roth conversions, and other big spending items in the near- and mid-term future.\n",
     "In order to execute a realization, one must provide an earning, saving, and Roth conversion plan. This is done in an Excel workbook with one spreadsheet (tab) per spouse with the following information:\n",
     "\n",
     "|year|anticipated income|ctrb taxable | ctrb 401k | ctrb Roth 401k | ctrb IRA | ctrb Roth IRA | Roth X | big ticket items|\n",
@@ -283,11 +284,11 @@
     "\n",
     "Roth conversion are specified in the column marked *Roth X*. Finally, *big ticket items* are the sale or purchase of a house, or any other major expense or money that you would give or receive (e.g., inheritance, or large gifts to or from you). Therefore, the sign (+/-) of entries in this column is important. All other column entries should be positive.\n",
     "\n",
-    "The tab name for each spreadsheet represents the name of the spouse for reporting yearly transactions affecting your plan. So for Jack and Jill, this worksheet file will have two tabs, the first one named *Jack* and the second one named *Jill*, following the same order of data provided before.\n",
+    "The tab name for each spreadsheet represents the name of the spouse for reporting yearly transactions affecting your plan. So for Jack and Jill, this worksheet file needs two tabs, the first one named *Jack* and the second one named *Jill*, following the same order of data provided before. In fact, HARP uses the names of these tabs as the individuals' names.\n",
     "\n",
     "Note that the file format from the (free) LibreOffice software can also be read, so you do not need to have an Excel license.\n",
     "\n",
-    "Jack and Jill provide their specific information in the file *jack+jill.xlsx*. Open this file in Excel and familiarize yourself with its contents."
+    "Jack and Jill has provided their specific information in the file *jack+jill.xlsx*. Open this file in Excel and familiarize yourself with its contents."
    ]
   },
   {
@@ -306,9 +307,9 @@
    "metadata": {},
    "source": [
     "## How to withdraw from spousal accounts?\n",
-    "By specifying an *auto* spousal split, the withdrawals from the retirement accounts will be made proportial to their respective balances. It can also be specified as a fractional value (e.g., 0.65) in which case 0.65 will be taken from the first account and the other 35% taken from the other (second entry) spouse.\n",
+    "By specifying an *auto* spousal split, the withdrawals from the retirement accounts will be made proportial to their respective balances. It can also be specified as a fixed fractional value (e.g., 0.65) in which case 0.65 will be taken from the first account and the other 35% taken from the other (second entry) spouse.\n",
     "\n",
-    "All withdrawals use a smart banking approach which favors depleting taxable accounts before tax-deferred, before tax-free. With *auto*, additional checks and bounds are used to coordinate the spousal accounts."
+    "All withdrawals use a smart banking approach which favors depleting taxable accounts before tax-deferred, before tax-free. With *auto*, additional checks and bounds are used to better coordinate the spousal accounts."
    ]
   },
   {
@@ -411,7 +412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d79d6dc",
+   "id": "84129645",
    "metadata": {},
    "source": [
     "To get more information about the last year, one can use\n",
@@ -522,7 +523,18 @@
     "## Next level\n",
     "Scripting Monte-Carlo simulations can be done by embedding the calls above in an iterative script. In those simulations, multiple instances are executed to further explore the robustness of your decisions under different market realizations.\n",
     "\n",
-    "The script *jack+jill.py* is intended for that purpose. It contains two functions. In the first one, historical data is used to explore how the plan survives the test of historical rates from 1928 to the most recent past. The other function uses a Monte-Carlo approach to generate ficticious rates derived from the statistical distribution of those observed in a selected time period."
+    "The script *jack+jill.py* is intended for that purpose. It contains two functions. In the first one, historical data is used to explore how the plan survives the test of historical rates from 1928 to the most recent past. The other function uses a Monte-Carlo approach to generate ficticious rates derived from the statistical distribution of those observed in a selected time period.\n",
+    "\n",
+    "This script is a template for designing your own. It can be run through the command line, but they can also be run from jupyter using the %run function.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f705663",
+   "metadata": {},
+   "source": [
+    "### Historical comparisons\n",
+    "When run with the *historical argument*, the script runs Jack's and Jill's scenario through historical data starting from 1930 to 1986. Note how their planned scenario is successful in all years except 1966 and 1969 if they are willing to spend \\\\$79,500 as inflation-adjusted net income. "
    ]
   },
   {
@@ -531,7 +543,28 @@
    "id": "38c55252",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%run jack+jill.py historical"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f62c154b",
+   "metadata": {},
+   "source": [
+    "### Monte-Carlo simulations\n",
+    "In a Monte-Carlo simulation, a random number generator is used to create values that meet the statistical criterion of a known distribution. In HARP, one specifies the range of years of historical data that will be used to characterize the probability distribution of the normal distribution. Once selected, one can run as many realization as desired. The more is generally the better, as it will improve the mean while increasing the possibility of observing rare events. A value of 1000 is generally sufficient."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "335efce1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run jack+jill.py Monte-Carlo 1000"
+   ]
   }
  ],
  "metadata": {
