--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -170,28 +170,28 @@
     "Rates of return can be specified for each class of assets, and inflation.\n",
     "Valid entries are 'historical', 'stochastic', or a list of fixed average values.\n",
     "\n",
-    "For *historical* and *stochastic* data, data from 1928 to today is available for experimenting.\n",
+    "For *historical* and *stochastic* data, data from 1928 to today are available for experimenting.\n",
     "Ranges chosen smaller that the life horizon will have rate values repeated in cycle. For example,\n",
     "choosing historical data from 1994 to 1996 will repeat these three values over the timespan of the plan.\n",
     "\n",
-    "Choosing a historical range of 1970 to 2022, will use the rates of 1970 for this year and 1971 for next, etc. Due to its particular sequence of rates, the worst-case scenario is a retirement starting in 1966. It can be simulated as follows:\n",
+    "Choosing a historical range of 1970 to 2022, will use the rates of 1970 for this year and 1971 for next, etc. Due to its particular sequence of rates, the worst-case known historical scenario is a retirement starting in 1966. It can be simulated as follows:\n",
     "\n",
     "    plan.setRates('historical', 1966, 2022)\n",
     "\n",
-    "In this case, this year will have the same rates as those that happened in 1966, and next year will have those from 1967, and so on. This is given for instructional purposes only. No one should plan using the worst-case scenario. But is can be informative to test your own case.\n",
+    "In this case, the  current year will have the same rates as those that happened in 1966, and next year will have those from 1967, and so on. This is given for instructional purposes only. No one should plan using the worst-case scenario. But is can be informative to test your own case. In practice, a success rate larger then 90% should be acceptable, but this is a personal choice.\n",
     "\n",
-    "Stochastic data on the other hand, computes the multivariate distributions for the 4 rates in the selected range. For example,\n",
+    "On the other hand, stochastic data computes the multivariate distributions for the 4 rates in the selected year range and uses this distribution to generate random rate values. For example,\n",
     "\n",
     "    plan.setRates('stochastic', 1945, 2022)\n",
     "    \n",
-    "will analyze the data from 1945 to 2022 and compute means and covariance to generate statistically similar results. The stochastic rates generated for the timespan can be plotted as we will see below.\n",
+    "will analyze the data from 1945 to 2022 and compute means and covariance to generate statistically similar results. The rates randomly generated for the timespan can be plotted and examined as we will see below.\n",
     "    \n",
-    "Finally one can also use fixed rates by providing a list of 4 entries as follows:\n",
+    "Finally one can also use fixed annual rates by providing a list of 4 entries as follows:\n",
     "\n",
     "    myrates = [9.6, 4.0, 3.0, 3.8]\n",
     "    plan.setRates(myrates)\n",
     "    \n",
-    "This example would use a fixed average rates of 9.6%, 4% and 3% average return on S&P500, corporate bonds, Treasury bonds, and common assets, respectively, with an average inflation rate of 3.8%. Common assets are investments tracking inflation only.\n",
+    "This example would use fixed average annual rates of 9.6%, 4% and 3% average annual return on S&P500, corporate bonds, Treasury bonds, and common assets, respectively, with an average annual inflation rate of 3.8%. Common assets are investments tracking inflation only.\n",
     "\n",
     "Note that the S&P500 rates provided always include dividends, which are assumed to be reinvested."
    ]
@@ -237,15 +237,15 @@
    "metadata": {},
    "source": [
     "## What about anticipated fixed income?\n",
-    "Pension and social security are fixed income. Model here assumes that pension is not inflation adjusted while social security benefits are (but code can easily be modified to account for inflation-adjusted pensions). Entries are the predicted amount for each spouse and the age of the commencement of benefits.\n",
+    "Pension and social security are fixed income. Model here assumes that pension income is not inflation adjusted while social security benefits are (but code can easily be modified to account for inflation-adjusted pensions). Entries are the predicted amount for each spouse and the age of the commencement of benefits.\n",
     "\n",
-    "If you have no pension, just use zeros (0) as entries, as in\n",
+    "If there are no pension benefits, just use zeros (0) as entries, as in\n",
     "\n",
     "    plan.setPension([0, 0], [65, 65])\n",
     "    \n",
     "For social security, you must provide the predicted amount(s) and the age(s) at which you start receiving benefits. There are plenty of social security benefit estimators on the web, including the info you can get directly from your own account at the Social Security Administration (ssa.gov).\n",
     "\n",
-    "Here Jill has an unindexed pension of \\\\$10k per year. Both Jack and Jill decided to take their social security benefits at age 70. The amounts provided are estimation of the amounts they would receive at age 70. "
+    "Here, Jill has an unindexed pension of \\\\$10k per year. Both Jack and Jill decided to take their social security benefits at age 70. The amounts provided are estimation of the amounts they would receive at age 70. "
    ]
   },
   {
@@ -276,13 +276,13 @@
     "| ... | | | | | | | | |\n",
     "|20XX | | | | | | | | |\n",
     "\n",
-    "Here, 20XX is the first year after both spouses have passed. For the columns, *anticipated income* is the annual amount (gross) that you anticipate to receive from employement or other sources (not including dividends from your taxable investment account). Note that column names are case sensitive and all of these entries must be in lower case.\n",
+    "Here, 20XX is the first year after both spouses have passed. For the columns, *anticipated income* is the annual amount (gross) that you anticipate to receive from employement or other sources (not including dividends from your taxable investment account). Note that column names are case sensitive and all of these entries must be in lower case. Best way to start is to use the template provided.\n",
     "\n",
     "For the purpose of this exercise, there is no clear definition of retirement age. There will be a year, however, from which you will stop having anticipated income, or diminished income due to decreasing your work load. This transition can be gradual or sudden.\n",
     "\n",
-    "Contributions to your savings accounts are marked as *ctrb*. Contributions to your 401k must also include your employer's contributions. As this file is in excel, you can use the calculator to enter percentage of your anticipated income if that is easier for you.\n",
+    "Contributions to your savings accounts are marked as *ctrb*. Contributions to your 401k must also include your employer's contributions. As this file is in excel, one can use the calculator to enter a percentage of the anticipated income as this can sometimes be easier.\n",
     "\n",
-    "Roth conversion are specified in the column marked *Roth X*. Finally, *big ticket items* are the sale or purchase of a house, or any other major expense or money that you would give or receive (e.g., inheritance, or large gifts to or from you). Therefore, the sign (+/-) of entries in this column is important. All other column entries should be positive.\n",
+    "Roth conversion are specified in the column marked *Roth X*. Roth conversion are typically performed in the years when the income is lower (and therefore tax rates), typically in the bridge years between having a full-time regular salary and collecting social security. Finally, *big ticket items* are used for accounting for the sale or purchase of a house, or any other major expense or money that you would give or receive (e.g., inheritance, or large gifts to or from you). Therefore, the sign (+/-) of entries in this column is important. All other column entries should be positive.\n",
     "\n",
     "The tab name for each spreadsheet represents the name of the spouse for reporting yearly transactions affecting your plan. So for Jack and Jill, this worksheet file needs two tabs, the first one named *Jack* and the second one named *Jill*, following the same order of data provided before. In fact, HARP uses the names of these tabs as the individuals' names.\n",
     "\n",
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84129645",
+   "id": "8ae26e4d",
    "metadata": {},
    "source": [
     "To get more information about the last year, one can use\n",
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f705663",
+   "id": "0c722518",
    "metadata": {},
    "source": [
     "### Historical comparisons\n",
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f62c154b",
+   "id": "41934da3",
    "metadata": {},
    "source": [
     "### Monte-Carlo simulations\n",
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "335efce1",
+   "id": "8e0e00d4",
    "metadata": {},
    "outputs": [],
    "source": [
